# local-stt

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SETUP-MLX-GERMAN.md  SETUP-MLX-GERMAN.typ  SUPPORT.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml
commands/: status.md
docs/plans/: 2026-02-26-history-and-mute.md  2026-02-26-stt-quality-improvements.md
menubar-app/: Package.swift
menubar-app/Sources/: AppInfo.swift  ConfigManager.swift  DaemonManager.swift  HistoryView.swift  HotkeyRecorderView.swift  MenuBarController.swift  MenuPopoverView.swift  SettingsView.swift  main.swift
scripts/: build-app.sh  create-signing-identity.sh  generate-icon.swift  install-app.sh  uninstall-app.sh
src/claude_stt/: __init__.py  cli.py  config.py  daemon.py  daemon_service.py  engine_factory.py  formatter.py  hotkey.py  keyboard.py  menubar.py  overlay.py  recorder.py  window.py
src/claude_stt/engines/: mlx_engine.py  whisper.py
