[project]
name = "local-stt"
version = "0.3.0"
description = "Free, local, private speech-to-text for macOS. No cloud, no API costs."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
    { name = "Jarrod Watts", email = "jarrod@jarrodwatts.com" }
]
keywords = ["speech-to-text", "stt", "voice", "dictation", "whisper", "mlx"]

dependencies = [
    "useful-moonshine-onnx",
    "sounddevice>=0.4",
    "pynput>=1.7",
    "pyperclip>=1.8",
    "numpy>=1.24",
    "tomli>=2.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
whisper = ["faster-whisper>=1.0"]
macos = ["pyobjc-framework-Cocoa"]
menubar = ["rumps>=0.4"]
windows = ["pywin32"]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/Advisior/local-stt"
Repository = "https://github.com/Advisior/local-stt"
Issues = "https://github.com/Advisior/local-stt/issues"
Changelog = "https://github.com/Advisior/local-stt/blob/main/CHANGELOG.md"

[project.scripts]
local-stt = "claude_stt.cli:main"
claude-stt = "claude_stt.cli:main"  # backward compatibility

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_stt"]

[tool.ruff]
line-length = 100
target-version = "py311"
